# BookwritterPro

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-server.txt  requirements.txt
bookwriter/: __init__.py  checker.py  cli.py  config.py  costs.py  extractor.py  graph.py  importer.py  kdp.py  llm.py  mcp_server.py  mock.py  models.py  pipeline.py  planner.py  prompts.py  provider.py  runtime_config.py  serve.py  store.py  writer.py
bookwriter/server/: __init__.py  api.py  broker.py  schemas.py  service.py
bookwriter/web/: app.js  covers.js  index.html  kdp.js  palette.js  styles.css
docs/: ARCHITECTURE.md  MCP.md
tests/: test_api.py  test_cli.py  test_costs.py  test_graph.py  test_import.py  test_kdp.py  test_mcp.py  test_models.py  test_pipeline.py  test_providers.py  test_publish.py  test_robustness.py  test_store.py
