[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bookwriterpro"
version = "0.1.0"
description = "Token-cost-optimized local book generation with a continuity knowledge graph."
requires-python = ">=3.10"
dependencies = ["anthropic>=0.69"]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.27"]
mcp = ["mcp>=1.2"]

[project.scripts]
bookwriter = "bookwriter.cli:main"
bookwriter-serve = "bookwriter.serve:main"

[tool.setuptools]
packages = ["bookwriter", "bookwriter.server"]
include-package-data = true

[tool.setuptools.package-data]
bookwriter = ["web/*"]
